--- a/estilos.css
+++ b/estilos.css
@@ -5,11 +5,11 @@
 
 }
 
-.container-presentacion {
-    height: 150px;
-    padding-top: 0px;
-  
+.lead{
+    font-size: 16pt;
+    margin-top: 5px;
 }
+
 
 .titulo {
     font-size: 20pt;
@@ -27,3 +27,14 @@
 .titulo:hover {
     transform: scale(1.3);
   }
+
+.text-muted {
+    text-decoration: none;
+    margin-right: 8px;
+}
+
+.btn-dark {
+    background-color: #26A2BD;
+    border: none;
+}
+
