--- a/estilos.css
+++ b/estilos.css
@@ -30,11 +30,12 @@
 
 .text-muted {
     text-decoration: none;
-    margin-right: 8px;
+    margin-right: 15px;
 }
 
-.btn-dark {
+.btn-agregar {
     background-color: #26A2BD;
+    color: white;
     border: none;
 }
 
